<resources>
    <string name="app_name" translatable="false">MyPlants</string>
    <string name="splash_app_name" translatable="false">My Plants</string>
    <string name="add_plant_activity_name">Add Plant</string>
    <string name="user_menu_settings">Settings</string>
    <string name="user_menu_logout">Logout</string>
    <string name="submit_button">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="channel_name" translatable="false">myChannel</string>
    <string name="channel_description" translatable="false">My plants channel</string>
    <string name="search_hint">search by name</string>
    <string name="sort_by">Sort by</string>
    <string name="api_url" translatable="false">http://api.openweathermap.org/data/2.5/forecast?</string>
    <string name="api_key" translatable="false">bf9fa411797e941a3536db50a36c86d5</string>
    <string name="plus" translatable="false">+</string>

    //Splash
    <string name="background_content_desc">Background image</string>

    //Login Activity
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_submit_button">Login</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_register">Register</string>
    <string name="login">Login</string>

    //Register activity
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>

    //Add picture to plant activity

    <string name="pic_choose_from_gallery">Choose from gallery</string>
    <string name="pic_take_picture">Take picture</string>
    <string name="pic_save_image">Save image</string>
    <string name="pic_modify_date">Picture\'s date (leave empty if today)</string>


    //Add plant activity
    <string name="plant_name">Plant\'s name</string>
    <string name="plant_description">Description</string>
    <string name="plant_watering_needs">How often your plant needs watering?</string>
    <string name="plant_fertilizing_needs">How often your plant needs fertilising?</string>
    <string name="plant_light_conditions">What light conditions does this plant prefer?</string>
    <string name="plant_outdoor_plant">Is this an outdoor plant?</string>
    <string name="plant_add_plant_title">Add a plant</string>
    <string name="plant_notes">Notes</string>
    <string name="plant_add_profile_picture">Add profile picture</string>
    <string name="plant_modify_plant">Modify plant</string>
    <string name="plant_modify_profile_pic">Modify profile picture</string>
    <string name="plant_change_date_added">Change date added</string>
    <string name="preview_content_description">Preview</string>

    //Mainactivity
    <string name="all_my_plants">My Plants</string>
    <string name="plant_image_content_description">Plant image</string>

    //Single plant
    <string name="single_gallery">Gallery</string>
    <string name="single_add_picture">Add more pictures</string>
    <string name="single_information">Information </string>
    <string name="single_information_plant_name">Plant\'s name</string>
    <string name="single_information_date_added">Date added</string>
    <string name="single_information_watering_needs">Watering needs</string>
    <string name="single_information_fertilizing_needs">Fertilizing needs</string>
    <string name="single_information_outdoor_plant">Outdoor plant</string>
    <string name="single_information_light_condition">Preferred light conditions</string>
    <string name="single_information_description">Description</string>
    <string name="single_information_notes">Notes</string>
    <string name="single_action">Actions</string>
    <string name="single_action_last_watered">Last watered</string>
    <string name="single_action_last_fertilized">Last fertilized</string>
    <string name="single_action_last_replanted">Last replanted</string>
    <string name="single_modify_information">Modify information</string>
    <string name="single_upcoming_tasks">Upcoming tasks</string>
    <string name="single_tasks_watering">Next watering</string>
    <string name="single_tasks_fertilizing">Next fertilizing</string>
    <string name="single_tasks_replanting">Next replanting</string>
    <string name="notification_button">Notifications</string>
    <string name="single_plant_add_pictures">Add pictures</string>
    <string name="delete_plant">Delete plant</string>
    <string name="left_arrow_content_description">Left arrow</string>
    <string name="right_arrow_content_description">Right arrow</string>
    <string name="image_content_description">Image</string>
    <string name="plus_content_description">Plus</string>
    <string name="pic_count" translatable="false">%1$d / %2$d</string>

    //TaskRecyclerAdapter
    <string name="task_fertilizing">Fertilizing</string>
    <string name="task_watering">Watering</string>
    <string name="task_todays_tasks">Today\'s tasks</string>
    <string name="task_tomorrows_tasks">Tomorrow\'s tasks</string>

    //Dashboard
    <string name="all_plants_button">All plants</string>

    //Gallery
    <string name="gallery_empty">Gallery is empty, add some pictures</string>
    //Weather forecast
    <string name="today_forecast">Today\'s forecast</string>
    <string name="current_temperature">Current temperature</string>
    <string name="current_min">Minimum temperature</string>
    <string name="current_max">Maximum temperature</string>
    <string name="current_wind_speed">Wind speed</string>
    <string name="celsius" translatable="false">%1$s °C</string>
    <string name="kmh" translatable="false">%1$s km/h</string>
    <string name="weather_forecast_content_desc">weather icon</string>
    <string name="weather_icon_url" translatable="false">http://openweathermap.org/img/wn/%1$s@2x.png</string>

    <string name="tomorrow_forecast">Tomorrow\'s forecast</string>
    <string name="tomorrow_temperature">Average temperature</string>
    <string name="tomorrow_min">Minimum temperature</string>
    <string name="tomorrow_max">Maximum temperature</string>
    <string name="tomorrow_wind_speed">Wind speed</string>

    //Notifications
    <string name="frost_expected">Please check the weather forecast cold weather is expected at </string>
    <string name="wind_expected">Please check the weather forecast heavy wind is expected at </string>
    <string name="weather_alert">Weather alert</string>


    //ImageDialog
    <string name="delete_picture">Delete picture</string>
    //Widget
    <string name="appwidget_text" translatable="false">MyPlants</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_open_app">Open app</string>
    <string name="widget_refresh_widget">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="widget_done">Done</string>
    <string name="widget_todo">TODO</string>

    <!-- Preference Titles -->

    <string name="wind_header">Wind</string>
    <string name="temp_header">Temperature </string>
    <string name="notification_header">Notification</string>
    <string name="language_header">Languages</string>

    <!-- Messages Preferences -->

    <string name="wind_title">Wind speed in km/h above which notification is sent</string>
    <string name="temp_title">Temperature in celsius below which notification is sent</string>
    <string name="notification_time_hour_title">Notification time (hour)</string>
    <string name="notification_time_minute_title">Notification time (minute)</string>
    <string name="language_title">Choose your language</string>

</resources>
