
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/wind_header">



        <ListPreference
            app:defaultValue="50"
            app:entries="@array/wind_entries"
            app:entryValues="@array/wind_values"
            app:key="wind"
            app:title="@string/wind_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/temp_header">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/temp_entries"
            app:entryValues="@array/temp_values"
            app:key="temperature"
            app:title="@string/temp_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/notification_header">
        <ListPreference
            app:defaultValue="11"
            app:entries="@array/notification_time_hour_entries"
            app:entryValues="@array/notification_time_hour_values"
            app:key="notification_time_hour"
            app:title="@string/notification_time_hour_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="00"
            app:entries="@array/notification_time_minute_entries"
            app:entryValues="@array/notification_time_minute_values"
            app:key="notification_time_minute"
            app:title="@string/notification_time_minute_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/language_header">

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>