<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlant">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/add_plant_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textSize="45sp"
            android:text="@string/plant_add_plant_title"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="30sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:id="@+id/plant_title"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/plant_name"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:inputType="text"
            android:layout_marginBottom="30sp"
            android:background="@drawable/rounded_edittext"
            android:padding="5dp"
            android:id="@+id/edit_text_plant_name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:textSize="16sp"
            android:inputType="text"
            android:hint="@string/plant_description"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="30sp"
            android:background="@drawable/rounded_edittext"
            android:padding="5dp"
            android:id="@+id/edit_text_plant_description"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:textSize="16sp"
            android:inputType="text"
            android:hint="@string/plant_notes"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="30sp"
            android:background="@drawable/rounded_edittext"
            android:padding="5dp"
            android:id="@+id/edit_text_plant_notes"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/plant_watering_needs"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="30sp"
                android:textSize="16sp"
                android:background="@drawable/rounded_edittext"
                android:padding="5dp" />
            <Spinner
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_weight="0.8"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="30sp"
                android:textSize="16sp"
                android:background="@drawable/rounded_edittext"
                android:padding="5dp"
                android:id="@+id/spinner_watering_needs">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/plant_fertilizing_needs"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="30sp"
                android:textSize="16sp"
                android:background="@drawable/rounded_edittext"
                android:padding="5dp" />
            <Spinner
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_weight="0.8"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="30sp"
                android:textSize="16sp"
                android:background="@drawable/rounded_edittext"
                android:padding="5dp"
                android:id="@+id/spinner_fertilizing_needs">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/plant_light_conditions"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="30sp"
                android:textSize="16sp"
                android:background="@drawable/rounded_edittext"
                android:padding="5dp" />
            <Spinner
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_weight="0.8"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="30sp"
                android:textSize="16sp"
                android:background="@drawable/rounded_edittext"
                android:padding="5dp"
                android:id="@+id/spinner_light_conditions">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:text="@string/plant_outdoor_plant"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="30sp"
                android:textSize="16sp"
                android:background="@drawable/rounded_edittext"
                android:padding="5dp" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="30sp"
                android:padding="5dp"
                android:id="@+id/radio_group_outdoor_plant">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:id="@+id/radio_button_yes"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:id="@+id/radio_button_no"/>
            </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="30sp"
            android:textSize="16sp"
            android:background="@drawable/rounded_edittext"
            android:padding="5dp"
            android:id="@+id/btn_add_profile_pic"
            android:text="@string/plant_add_profile_picture"
            />
        <ImageView
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="30sp"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:id="@+id/img_view_plant_profile_preview"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="30sp"
            android:textSize="16sp"
            android:background="@drawable/rounded_edittext"
            android:padding="5dp"
            android:id="@+id/btn_plant_submit"
            android:text="@string/submit_button"
            />

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>