<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_weather"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    android:layout_gravity="center"
    app:layout_anchorGravity="center"
    app:cardElevation="3dp"
    app:cardMaxElevation="0dp"
    app:cardBackgroundColor="#CEF0D3">

    <LinearLayout
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:id="@+id/card_view_weather_date"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/card_view_weather_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:contentDescription="@string/weather_forecast_content_desc" />

            <TextView
                android:id="@+id/card_view_weather_brief_desc"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_gravity="bottom"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/card_view_weather_full_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_current_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_temperature" />

            <TextView
                android:id="@+id/card_view_weather_current_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_min_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_min" />

            <TextView
                android:id="@+id/card_view_weather_current_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_max_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_max" />

            <TextView
                android:id="@+id/card_view_weather_current_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_wind_speed" />

            <TextView
                android:id="@+id/card_view_weather_current_wind_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
